[gd_scene load_steps=10 format=2]

[ext_resource path="res://asset/civil/farm/field.png" type="Texture" id=1]
[ext_resource path="res://asset/civil/farm/farm.gd" type="Script" id=2]
[ext_resource path="res://asset/ui/icons/supply.png" type="Texture" id=3]
[ext_resource path="res://asset/military/flag/flag.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/ui/icons/warning.png" type="Texture" id=5]
[ext_resource path="res://asset/ui/bar/bar_circle.png" type="Texture" id=6]
[ext_resource path="res://asset/ui/burning/burning.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 98.9168

[sub_resource type="Animation" id=2]
resource_name = "farm_iddle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.782, -100 ), Vector2( 1.782, -110 ), Vector2( 1.782, -125 ), Vector2( 1.782, -116 ) ]
}

[node name="farm" type="RigidBody2D"]
mode = 2
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1.782, -100 )
z_index = 1
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Sprite2"]
visible = false
modulate = Color( 1, 0.0627451, 0.0156863, 1 )
light_mask = -2147483647
rotation = 3.14159
texture = ExtResource( 5 )

[node name="income_progress" type="TextureProgress" parent="Sprite2"]
modulate = Color( 0.145098, 0.145098, 0.145098, 0.733333 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -25.0
margin_right = -25.0
margin_bottom = -25.0
step = 0.01
value = 90.0
texture_progress = ExtResource( 6 )
fill_mode = 5
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="burning" parent="." instance=ExtResource( 7 )]
position = Vector2( 0.890198, -41.1973 )

[node name="flag" parent="." instance=ExtResource( 4 )]
position = Vector2( -117.646, -43.8411 )
scale = Vector2( 0.6, 0.6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="income_timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "farm_iddle"
anims/farm_iddle = SubResource( 2 )
[connection signal="timeout" from="income_timer" to="." method="_on_income_timer_timeout"]
